--- a/nextgenindex21.html
+++ b/nextgenindex21.html
@@ -3,7 +3,7 @@
   ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
   ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
       
-      Updated: Alien v2 dec20
+      Updated: Alien v2 Jan21
       Website: https://alexandroshub.github.io
       Contact: 	a-papaspyrou@outlook.com.gr
       CC-BY international 4 2011-2020 Alexandros Papaspyrou
@@ -13,7 +13,6 @@
       
      Welcome in my personal website 100% HTML Hosted by Github
      Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou 
-  
     ==========================================================================   -->
 <!DOCTYPE html>
 <html>
@@ -111,8 +110,9 @@
       <a href="javascript:void(0);" class="icon" onclick="myFunction()" aria-label="menu">
       <i class="fa fa-bars"></i>
       </a>
- <!-- 2021 --><a href="https://alexandroshub.github.io/nextgenindex21.html" class="w3-padding-large w3-hide-small w3-right"><font color="white">
-About</font></a>
+ <!-- 2021 --><a href="https://alexandroshub.github.io/welcome21.html" class="w3-padding-large w3-hide-small w3-right"><font color="white">
+<i class="fa fa-info-circle" aria-hidden="true"></i>
+</font></a>
     </div>
     <script>
       function myFunction() {var x = document.getElementById("myTopnav"); if (x.className === "topnav") {x.className += " responsive";} else {x.className = "topnav";}}
@@ -173,11 +173,10 @@ About</font></a>
   </div>
   <div style="background-color: #000; color: #D1D3D8;">
     <marquee behavior="scroll" direction="left">
-      <span class="w3-tag w3-black"><i class="fa fa-warning" style="color:yellow"></i> <b>UPDATE:</b></span>Απο 9/11 αποσύρεται το app της Hotjar και του appzi. Απο 17/11 απόσυρση ορισμένων links
-      <span class="w3-tag" style="background-color: #BD1D1F; color: #D1D3D8;"> <b>AP NEWS</b> </span> FOSSA: New IoT project is under construction!  <a href="https://alexandroshub.github.io/fossa.iot.html">try /fossa.iot</a>    
-      <span class="w3-tag" style="background-color: #4B759B; color: #D1D3D8;">Το alexandrosHUB προτείνει: </span> <a href="https://clickevents.gr/event/10th-mobile-amp-connected-world-conference-smart-connected-world-the-holy-grail-of-connectivity/">10th Mobile</a>
-      //   alexandrosHUB respects your freedom and the social solidarity of your community. So it's free as in freedom.
-    </marquee>
+ <!--     <span class="w3-tag w3-black"><i class="fa fa-warning" style="color:yellow"></i> <b>UPDATE:</b></span>Απο 9/11 αποσύρεται το app της Hotjar και του appzi. Απο 17/11 απόσυρση ορισμένων links
+      <span class="w3-tag" style="background-color: #BD1D1F; color: #D1D3D8;"> <b>AP NEWS</b> </span> FOSSA: New IoT project is under construction!  <a href="https://alexandroshub.github.io/fossa.iot.html">try /fossa.iot</a>   -->   
+      <span class="w3-tag" style="background-color: #4B759B; color: #D1D3D8;">Το AlexandrosHUB προτείνει eBooks: </span> <a href="https://docs.google.com/file/d/0B-6_L8q1CAqiVFFtU096LUlTblU/edit">Ο Μεγάλος Αδερφός 1984 του George Orwell </a> και <a href="https://docs.google.com/file/d/0B-6_L8q1CAqiaXRscG5HVTFhMlU/edit">Ο Θαυμαστός Καινούργιος Κόσμος του Aldous Huxley</a>
+  </marquee>
   </div>
   <!-- Promo -->
   <div class="w3-container w3-light-grey" style="padding:0px 0px"  id="port">
