--- a/pod.html
+++ b/pod.html
@@ -1,5 +1,6 @@
 
 
+
 <!-- 
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -33,12 +34,18 @@ body, html {height: 100%}
 <div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle w3-jumbo">
   </div>
-  <div class="w3-display-topright w3-container w3-xlarge"></p><button class="w3-button w3-black">soon</button></p>
+  <div class="w3-display-topright w3-container w3-xlarge">
+   <a href="https://alexandroshub.github.io/"> <span class="w3-button w3-top w3-black w3-xxlarge w3-text-grey  w3-opacity w3-hover-opacity-off w3-hover-black" style="width:auto;right:0;"><i class="fa fa-home"></i></span></a> 
+   
+  
     </div>
   <div class="w3-display-topleft w3-container w3-xlarge">
   <p>
   <button onclick="document.getElementById('links').style.display='block'" class="w3-button w3-black"><i class="fa fa-bars"></i></button>
-  <button class="w3-button w3-black">soon</button></p>
+  
+  <a href=" https://anchor.fm/alexandroshub"  class="w3-button w3-black"><b> anchor <font color="green"><i class="fa fa-podcast" aria-hidden="true"></i> pod</font></b></a>
+  
+</p>
   </div>
   <div class="w3-display-bottomleft w3-container w3-jumbo">
       <p>Enjoy</p>
@@ -49,12 +56,11 @@ body, html {height: 100%}
   <div class="w3-modal-content w3-animate-zoom">
     <div class="w3-container w3-black">
       <span onclick="document.getElementById('links').style.display='none'" class="w3-button w3-display-topright w3-large">x</span>
-      <h1>Menu</h1>
+      <h1>Αρχείο εκπομπών</h1>
     </div>
     <div class="w3-container">
 <!-- ================================================================  -->
-<a href="https://www.teamviewer.com/en/" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b>Use  <font color="cyan">teamviewer</font></b></a>
-<a href="https://alexandroshub.github.io/contact" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black"><b>Use  <font color="cyan">Contact</font></b></a>
+Βρείτε αναλυτικά όλες τις εκπομπές μας. Ακούστε, κατεβάστε ή σχολιάστε οτι θέλετε!
 
 <!-- ================================================================  -->  
 		</div>
