--- a/nextgenindex21.html
+++ b/nextgenindex21.html
@@ -1,3 +1,4 @@
+
 <!--==========================================================================
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
   ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
@@ -8,15 +9,15 @@
       Contact: 	a-papaspyrou@outlook.com.gr
       CC-BY international 4 2011-2020 Alexandros Papaspyrou
   
-     Contact: 	a-papaspyrou@outlook.com.gr | alexispapy@gmail.com | alexispapy@outlook.com | papaspyrou.alexandros@gmail.com
+     Contact: alexandroshub@protonmail.com  // 	a-papaspyrou@outlook.com.gr | alexispapy@gmail.com | alexispapy@outlook.com | papaspyrou.alexandros@gmail.com
      Mob: 	+30 694 054 8867
       
      Welcome in my personal website 100% HTML Hosted by Github
-     Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou 
+     Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou ॐ
     ==========================================================================   -->
 <!DOCTYPE html>
-<html>
-  <title>AlexandrosHUB | Automations IoT Programming Technology | Personal website of Papaspyrou Alexandros |</title>
+<html lang="el">
+  <title>AlexandrosHUB | Automations IoT and all about tech</title>
   <link rel="icon" href="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" type="image/png">
   <head>
     <!-- Google Tag Manager -->
@@ -101,12 +102,12 @@
     </style>
     <div class="topnav" id="myTopnav">
       <a href="https://alexandroshub.github.io" class="active"  id="home"><img src= "https://64.media.tumblr.com/5bda3cb7ce87ed9de69c85af725ebe78/f06bf6e1e4ca1249-32/s500x750/68ec78a36cb70324f7aa6a0d7657b46926fc44b2.png" alt="AP logo" style="width:28px;"></a>
-      <a href="https://alexandroshub.github.io/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
-      <a href="https://alexandroshub.github.io/portfolio.html">
+      <a href="/cv.html"><i class="far fa-id-card"></i> &nbsp; AboutMe</a> 
+      <a href="/portfolio.html">
         <script src='https://kit.fontawesome.com/a076d05399.js'></script> <i class="far fa-folder-open"></i> &nbsp; Portfolio
       </a>
-      <a href="https://alexandroshub.github.io/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
-      <a href="https://alexandroshub.github.io/contact.html"><i class="far fa-comment"></i>  &nbsp;Contact</a>
+      <a href="/plus.html"><i class="fas fa-icons"></i>  &nbsp;Plus</a> 
+      <a href="/contact.html"><i class="far fa-comment"></i>  &nbsp;Contact</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()" aria-label="menu">
       <i class="fa fa-bars"></i>
       </a>
@@ -129,12 +130,10 @@
       <div class="w3-display-left w3-text-white" style="padding:48px">
         <span class="w3-jumbo w3-hide-small w3-animate-left">Welcome</span><br>
         <span class="w3-xxlarge w3-hide-large w3-hide-medium w3-animate-left">Welcome</span><br>
-        <body onload="typeWriter()">
-          <p id="demo" class="w3-large"></p>
-  </body>
-  <span class="w3-large" style="background-color: #0033669C; color: #72c494; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Personal website of Papaspyrou Alexandros. All about IoT, Automations, Robotics, projects with arduino or raspberryPi and more...</span>
-  <p><a href="https://alexandroshub.github.io/welcome21.html" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black">
-  <b>Για τη σελίδα.</b></a></p>    </div> 
+      
+  <h1 span class="w3-large" style="background-color: #0033669C; color: #72c494; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">Personal website of Papaspyrou Alexandros. All about IoT, Automations, Robotics, projects with arduino or raspberryPi and more...</h1>
+<!--  <p><a href="/welcome21.html" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black">
+  <b>Για τη σελίδα.</b></a></p>   --> </div> 
   <span class="w3-hide-small">  
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
   </div></span>
