--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@ body, html {height: 100%}
     background-size: cover;
 }
 </style>
+  
+  <script src="https://code.responsivevoice.org/responsivevoice.js?key=uvmA9uSz"></script>
+  <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "DGyOCjFW42");s.setAttribute("src", "https://accessibilityserver.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://accessibilityserver.org">website accessibility</a></noscript>
 <body>
 <div class="bgimg w3-display-container w3-text-white">
   <div class="w3-display-middle w3-jumbo">
