--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,13 @@ Handcrafted With ❤ (CC)-By: Alexandros Papaspyrou
       </style>
       <div id="whitetop2"></div>
     </header>
-
+    
+  <div class="w3-content w3-center" style="max-width:700px">
+          <h2>@alexandroshub</h2>
+          <p>Θα ήθελα πολύ να ακούσω τη γνώμη και τις προτάσεις σου. <br>mail: alexandroshub@protonmail.com
+          </p>
+          </div>
+    
     <div class="w3-row">
       <div class="w3-container w3-half">
         <div class="w3-center w3-padding-32">
