--- a/glitch.html
+++ b/glitch.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -110,35 +111,24 @@ body {
 
 <div class="header">
   <h1>glitch</h1>
-  <p>Resize the browser window to see the effect.</p>
+  <p>Privacy is a Human Right</p>
 </div>
 
 <div class="topnav">
   <a href="#">Blog</a>
   <a href="#">Crypto</a>
-  <a href="#" style="float:right">Home</a>
+  <a href="https://alexandroshub.github.io/" style="float:right">Home</a>
 </div>
 
 <div class="row">
   <div class="leftcolumn">
     <div class="card">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2017</h5>
-      <div class="fakeimg" style="height:200px;">Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
-    </div>
-
-  </div>
-  <div class="rightcolumn">
-    <div class="card">
-      <h2>About Me</h2>
-      <div class="fakeimg" style="height:100px;">Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-    </div>
-    <div class="card">
-      <h3>off the record</h3>
-      
+      <h2>intro</h2>
+      <h5>Encryption is not a Crime, Key Disclosure Laws are Unethical.</h5>
+      <p>Θα ήθελες να ακούνε τις ιδιωτικές σου συνομιλίες;
+θα ήθελες o ταχυδρόμος να ανοίγει τα γράμματά σου;
+θα ήθελες κάποιος να εισβάλλει στο διαμέρισμά σου ή να σε παρακολουθεί;
+Αυτό δεν είναι επιτρεπτό - και δεν θα έπρεπε να συμβαίνει ούτε στον ψηφιακό κόσμο. Δυστυχώς, αυτό το δικαίωμα δεν γίνεται σεβαστό. Δυστυχώς, ό,τι κάνεις στο διαδίκτυο μπορεί να παρακολουθείται και παρακολουθείται. Τα κράτη, διαφημιστικές εταιρίες ή όποιος θέλει πληροφορίες για σένα δεν διστάζει να τις συγκεντρώσει. Τα καλά νέα είναι οτι μπορείς να μάθεις πως να προστατεύεις την ιδιωτικότητά σου στο διαδίκτυο. Η ισχυρή κρυπτογράφηση δεν είναι μόνο για κατασκόπους, πρωθυπουργούς και τράπεζες. Η κρυπτογράφηση δεν είναι προσβάσιμη μόνο στους κομπιουτεράδες. Η κρυπτογραφία είναι για όλους και όλοι έχουνε δικαίωμα στην ιδιωτικότητα.</p>
 <style>
 .dropbtn {
   background-color: #333;
@@ -177,26 +167,25 @@ body {
 }
 
 .dropdown:hover .dropbtn {
-  background-color: #3e8e41;
+  background-color: #000;
 }
 </style>
 
 <div class="dropdown">
   <button class="dropbtn">Menu</button>
   <div class="dropdown-content">
-  <a href="#">Link 1</a>
-  <a href="#">Link 2</a>
-  <a href="#">Link 3</a>
+  <a href="https://alexispapy.tumblr.com/post/640856522738548736/%CE%BA%CF%81%CF%85%CF%80%CF%84%CE%BF%CE%B3%CF%81%CE%B1%CF%86%CE%AF%CE%B1">Κρυπτογραφία</a>
+  <a href="https://alexispapy.tumblr.com/post/640470025603563520/%CF%83%CF%84%CE%B5%CE%B3%CE%B1%CE%BD%CE%BF%CE%B3%CF%81%CE%B1%CF%86%CE%AF%CE%B1">Στεγανογραφία</a>
   </div>
 </div>
-
-      <div class="fakeimg"><p>Image</p></div>
-      <div class="fakeimg"><p>Image</p></div>
-      <div class="fakeimg"><p>Image</p></div>
     </div>
+
+  </div>
+  <div class="rightcolumn">
+      
     <div class="card">
-      <h3>Follow Me</h3>
-      <p>Some text..</p>
+      <h3>Links</h3>
+      <p>Soon..</p>
     </div>
   </div>
 </div>
