--- a/pod.html
+++ b/pod.html
@@ -61,7 +61,7 @@ body, html {height: 100%}
     <div class="w3-container">
 <!-- ================================================================  -->
 Βρείτε αναλυτικά όλες τις εκπομπές μας. Ακούστε, κατεβάστε ή σχολιάστε οτι θέλετε!
-
+<script src="//rss.bloople.net/?url=https%3A%2F%2Fanchor.fm%2Fs%2F47086a28%2Fpodcast%2Frss&showtitle=false&type=js"></script>
 <!-- ================================================================  -->  
 		</div>
 	</div>
