--- a/pod.html
+++ b/pod.html
@@ -62,6 +62,8 @@ body, html {height: 100%}
 <!-- ================================================================  -->
 Βρείτε αναλυτικά όλες τις εκπομπές μας. Ακούστε, κατεβάστε ή σχολιάστε οτι θέλετε!
 <script src="//rss.bloople.net/?url=https%3A%2F%2Fanchor.fm%2Fs%2F47086a28%2Fpodcast%2Frss&showtitle=false&type=js"></script>
+	    
+	    <iframe src="https://anchor.fm/alexandroshub/embed" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
 <!-- ================================================================  -->  
 		</div>
 	</div>
