--- a/+link2web.html
+++ b/+link2web.html
@@ -1,3 +1,4 @@
+
 <!-- SpecialPage Plus v.alien2 + icon
 
 ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
@@ -159,9 +160,20 @@ function closeFullscreen() {
 <button class="accordion2">BETTER YOU
 </button>
 <div class="panel">
+<a href="https://www.mindful.org/meditation/mindfulness-getting-started/
+">mindful</a>  | 
+<a href="https://nutritionhome.gr/news/">nutritionhome</a>  | 
+<a href="https://mariamanganari.gr/%CE%BF%CE%B4%CE%B7%CE%B3%CF%8C%CF%82-mindfulness-%CE%B3%CE%B9%CE%B1-%CE%B1%CF%81%CF%87%CE%AC%CF%81%CE%B9%CE%BF%CF%85%CF%82-%CF%84%CE%BF-%CF%84%CE%B9-%CF%84%CE%BF-%CF%80%CF%8E%CF%82-%CE%BA%CE%B1/
+">Οδηγός Mindfulness</a>  | 
  <br>       
 
+<!--
+https://www.iatronet.gr/ygeia/psyxiki-ygeia/article/57052/ti-einai-to-mindfulness-kai-pws-efarmozetai.html
 
+https://www.mindfulness360.net/home
+
+https://successhype.com/
+-->
 
 </div>
 
@@ -301,6 +313,10 @@ function closeFullscreen() {
 		<a href="https://thehackernews.com/">thehackernews</a> |   
 		<a href="https://blog.elcomsoft.com/">elcomsoft</a> |   
         <!-- 
+        https://blog.elink.io/
+        https://www.pontikis.net/
+        https://www.ired.gr/
+        https://byteblog.gr/
         -->
 	<br><span class="w3-red"> MAGAZINE </span>
 		<a href="https://gr.pcmag.com/">pcmag</a> |         
@@ -415,6 +431,18 @@ function closeFullscreen() {
         https://www.aqs.gr/
         https://www.cqs.com.gr/
 https://subscribe.packtpub.com/
+https://www.processlibrary.com/en/
+
+https://www.privacywall.org/
+https://www.info.com/
+https://www.startpage.com/
+
+https://www.coindesk.com/coindesk20
+
+https://www.secnews.gr/
+****
+https://stinpriza.org/
+****
 -->      
 
 
