--- a/nextgenindex21.html
+++ b/nextgenindex21.html
@@ -188,11 +188,7 @@
     <div id="baroty"></div>
     
       <div class="w3-content w3-center" style="max-width:700px">
- <center>
-      <span class="w3-opacity w3-large w3-border-dark-grey w3-padding-16" style="text-shadow:1px 1px 0 #444"><i class="fa fa-quote-left"style="font-size:12px;color:#72c494"></i> Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία. <i class="fa fa-quote-right"style="font-size:12px;color:#72c494"></i></span>
-      <br>   
-
- </center>      
+        <!-- <center><span class="w3-opacity w3-large w3-border-dark-grey w3-padding-16" style="text-shadow:1px 1px 0 #444"><i class="fa fa-quote-left"style="font-size:12px;color:#72c494"></i> Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία. <i class="fa fa-quote-right"style="font-size:12px;color:#72c494"></i></span><br></center>   -->   
       <h2>Καλωσόρισες</h2>
    <h4>είναι η προσωπική ιστοσελίδα του Αλέξανδρου Παπασπύρου</h4>
 <p>εδώ μπορείς να βρεις πολλά γύρω από τους <span class="w3-tag w3-small w3-orange"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/automation';"><b><i class="fas fa-cog"></i> Aυτοματισμούς</b></a></span> τη <span class="w3-tag w3-small w3-black"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/soon';"><b><i class="fas fa-robot"></i> Ρομποτική </b></a></span> το <span class="w3-tag w3-small w3-white"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/iot';"><b><i class="fas fa-network-wired"></i> IoT</b></a></span>  και να βρεις project με <span class="w3-tag w3-small w3-blue"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/arduino';"><b><i class="fas fa-infinity"></i> Arduino</b></a></span> και <span class="w3-tag w3-small w3-red"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/raspberrypi';"><b><i class="fab fa-raspberry-pi"></i> Raspberry Pi</b></a></span> και εφαρμογές <span class="w3-tag w3-small w3-purple"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/codingzone';"><b><i class="fas fa-code"></i> Προγραμματισμού</b></a></span> αλλά και οδηγούς και περιεχόμενο ψυχαγωγίας και ενημέρωσης σε θέματα γύρω από τη τεχνολογία.</p>
