--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-
+<!-- 14/2 -->
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script><footer style="background-color: #000; color: #FF3B2F;"><center><i class="fas fa-exclamation-circle"></i> Υπάρχει πρόβλημα με εικονίδια που ελέγχεται.</center></footer>
 <!--==========================================================================
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
   ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
