--- a/newsletters.html
+++ b/newsletters.html
@@ -122,7 +122,7 @@ function closeFullscreen() {
     </marquee>
   </div>
   
-<rssapp-wall id="TH60Tc62VaVWkiAT"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+<rssapp-wall id="HdNUdUnkDYEmwNwL"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>	   
 
 	  
 <!--  //////////////////////////////////////////// -->
