--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!-- 14/2 -->
-<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script><footer style="background-color: #000; color: #FF3B2F;"><center><i class="fas fa-exclamation-circle"></i> Υπάρχει πρόβλημα με εικονίδια που ελέγχεται.</center></footer>
-<!--==========================================================================
+<!-- 14/4 -->
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script><footer style="background-color: #000; color: #FF3B2F;"><center><i class="fas fa-exclamation-circle"></i> Δοκίμασε τα σήμερα... <a href="https://alexandroshub.github.io/imtex">AlienV1</a>  | <a href="https://alexandroshub.github.io/alphapi">alphapi(alpha)</a></center></footer><!--==========================================================================
   ░█▀▀█ ░░ ▒█▀▀█ █▀▀█ █▀▀█ █▀▀█ █▀▀ █▀▀█ █░░█ █▀▀█ █▀▀█ █░░█ 
   ▒█▄▄█ ▀▀ ▒█▄▄█ █▄▄█ █░░█ █▄▄█ ▀▀█ █░░█ █▄▄█ █▄▄▀ █░░█ █░░█ 
   ▒█░▒█ ░░ ▒█░░░ ▀░░▀ █▀▀▀ ▀░░▀ ▀▀▀ █▀▀▀ ▄▄▄█ ▀░▀▀ ▀▀▀▀ ░▀▀▀ 
