--- a/alphapi.html
+++ b/alphapi.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="el">
   <title>AlexandrosHUB | Automations IoT and all about tech</title>
@@ -184,6 +185,7 @@
         <li><a href="#band">INTRO</a></li>
         <li><a href="#tour">MENU</a></li>
         <li><a href="#contact">CONTACT</a></li>
+        
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" href="#">MORE
           <span class="caret"></span></a>
@@ -193,7 +195,7 @@
             <li><a href="#">Media</a></li> 
           </ul>
         </li>
-        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
+        <li><a href="#search"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
   </div>
@@ -260,16 +262,20 @@
   <p><em>είναι η προσωπική ιστοσελίδα του Αλέξανδρου Παπασπύρου</em></p>
 <p>εδώ μπορείς να βρεις πολλά γύρω από τους <span class="w3-tag w3-small w3-orange"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/automation';"><b><i class="fas fa-cog"></i> Aυτοματισμούς</b></a></span> τη <span class="w3-tag w3-small w3-black"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/soon';"><b><i class="fas fa-robot"></i> Ρομποτική </b></a></span> το <span class="w3-tag w3-small w3-white"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/iot';"><b><i class="fas fa-network-wired"></i> IoT</b></a></span>  και να βρεις project με <span class="w3-tag w3-small w3-blue"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/arduino';"><b><i class="fas fa-infinity"></i> Arduino</b></a></span> και <span class="w3-tag w3-small w3-red"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/raspberrypi';"><b><i class="fab fa-raspberry-pi"></i> Raspberry Pi</b></a></span> και εφαρμογές <span class="w3-tag w3-small w3-purple"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/codingzone';"><b><i class="fas fa-code"></i> Προγραμματισμού</b></a></span> αλλά και οδηγούς και περιεχόμενο ψυχαγωγίας και ενημέρωσης σε θέματα γύρω από τη τεχνολογία.</p>
   <br>
-  <div class="row">
+  <div id="search"></div>
+<script async src="https://cse.google.com/cse.js?cx=da9cf2b4ec807d8de"></script>
+<div class="gcse-search"></div>
+ <br>
+
+   <button onclick="window.location.href='https://alexandroshub.github.io/welcome21.html'"   class="btn pull-center">read more About</button> <br>
+   <br>
+<div class="row">
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>Plus</strong></p><br>
       <a href="#demo" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
+        <i class="fas fa-icons" style="font-size:24px"></i> </a>
       <div id="demo" class="collapse">
-        <p>Guitarist and Lead Vocalist</p>
-        <p>Loves long walks on the beach</p>
-        <p>Member since 1988</p>
+        <p>Η αγαπημένη μου ενότητα! podcasting, blogging, videos, links  και ότι άλλο μπορεί να προκύψει.</p>
       </div>
     </div>
     <div class="col-sm-4">
@@ -329,7 +335,7 @@
         <div class="thumbnail">
           <img src="https://64.media.tumblr.com/22f322af60457be74e7a6e5d1ecfbd40/373afe46f4cadf41-25/s2048x3072/6a832952d64e4d860a74a68d38f50f984e4300ce.png" alt="San Francisco" width="400" height="300">
           <p><strong>About Me</strong></p>
-          <p>Sunday 29 November 2015</p>
+          <p>Δες το βιογραφικό μου το background τα hobby μου και άλλα σχετικά με εμένα.</p>
           <button class="btn" data-toggle="modal" data-target="#myModal">Buy Tickets</button>
         </div>
       </div>
@@ -387,23 +393,7 @@
               <button onclick="window.location.href='https://alexandroshub.github.io/contact'"   class="btn pull-left">Contact</button>
 <br></div>
     
-    <div class="col-md-8">
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-        </div>
-      </div>
-      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
-      <br>
-      <div class="row">
-        <div class="col-md-12 form-group">
-          <button class="btn pull-right" type="submit">Send</button>
-        </div>
-      </div>
-    </div>
+
   </div>
   <br>
   <h3 class="text-center">From The +Blog</h3>  
