--- a/alphapi.html
+++ b/alphapi.html
@@ -211,6 +211,40 @@
 </nav>
 
 
+
+
+
+ <style>
+     
+      body, html { height: 100%; line-height: 1.8;}
+      /* Full height image header */
+      .bgimg-1 {
+      background-position: center; background-size: cover;
+      background-image: url("https://c2.staticflickr.com//3/2795/33046870276_99da24ee4b_o.png");
+      min-height: 60%;
+      -webkit-filter: grayscale(90%);
+    filter: grayscale(90%); /* make all photos black and white */ 
+      }
+      .w3-bar .w3-button { padding: 16px;}
+    </style>
+ <!-- Header with full-height image -->
+    <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
+      
+      <div class="w3-display-left w3-text-white" style="padding:48px">
+        <span class="w3-jumbo w3-hide-small w3-animate-left">Welcome</span><br>
+        <span class="w3-xxlarge w3-hide-large w3-hide-medium w3-animate-left">Welcome</span><br>
+      <h5>Personal website of Papaspyrou Alexandros. </h5>
+  <h1 span class="w3-large" style="background-color: #0033669C; color: #72c494; display: inline-block; padding: 3px 10px; font-weight: bold; border-radius: 5px;">All about IoT, Automations, Robotics, projects with arduino or raspberryPi and more...</h1>
+<!--  <p><a href="/welcome21.html" class="w3-button w3-black w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off w3-hover-black">
+  <b>Για τη σελίδα.</b></a></p>   --> </div> 
+  <span class="w3-hide-small">  
+  <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
+  </div></span>
+  </header>
+
+
+
+
 <div class="jumbotron text-center">
   <h2>Personal website of Papaspyrou Alexandros.</h2> 
   <p>All about IoT, Automations, Robotics, projects with arduino or raspberryPi and more...</p> 
@@ -221,8 +255,15 @@
 
 </div>
 
+<br>
 
-
+   <div class="w3-content w3-center" style="max-width:700px">
+        <!-- <center><span class="w3-opacity w3-large w3-border-dark-grey w3-padding-16" style="text-shadow:1px 1px 0 #444"><i class="fa fa-quote-left"style="font-size:12px;color:#72c494"></i> Ζούμε σε μια κοινωνία απολύτως εξαρτώμενη από την επιστήμη και την τεχνολογία,<br> όπου σχεδόν κανένας δεν ξέρει τίποτα για την επιστήμη και την τεχνολογία. <i class="fa fa-quote-right"style="font-size:12px;color:#72c494"></i></span><br></center>   -->   
+      <h2>Καλωσόρισες</h2>
+   <p>είναι η προσωπική ιστοσελίδα του Αλέξανδρου Παπασπύρου</p>
+<p>εδώ μπορείς να βρεις πολλά γύρω από τους <span class="w3-tag w3-small w3-orange"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/automation';"><b><i class="fas fa-cog"></i> Aυτοματισμούς</b></a></span> τη <span class="w3-tag w3-small w3-black"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/soon';"><b><i class="fas fa-robot"></i> Ρομποτική </b></a></span> το <span class="w3-tag w3-small w3-white"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/iot';"><b><i class="fas fa-network-wired"></i> IoT</b></a></span>  και να βρεις project με <span class="w3-tag w3-small w3-blue"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/arduino';"><b><i class="fas fa-infinity"></i> Arduino</b></a></span> και <span class="w3-tag w3-small w3-red"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/raspberrypi';"><b><i class="fab fa-raspberry-pi"></i> Raspberry Pi</b></a></span> και εφαρμογές <span class="w3-tag w3-small w3-purple"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/codingzone';"><b><i class="fas fa-code"></i> Προγραμματισμού</b></a></span> αλλά και οδηγούς και περιεχόμενο ψυχαγωγίας και ενημέρωσης σε θέματα γύρω από τη τεχνολογία.</p>
+   </div>
+<br><br>
   <!--
     _                                                                    
     |_) _. ._   _.  _ ._     ._ _         /\  |  _      _. ._   _| ._ _   _ 
@@ -321,10 +362,7 @@
 
 <!-- Container (The Band Section) -->
 <div id="band" class="container text-center">
-  <h3>Καλωσόρισες</h3>
-  <p><em>είναι η προσωπική ιστοσελίδα του Αλέξανδρου Παπασπύρου</em></p>
-<p>εδώ μπορείς να βρεις πολλά γύρω από τους <span class="w3-tag w3-small w3-orange"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/automation';"><b><i class="fas fa-cog"></i> Aυτοματισμούς</b></a></span> τη <span class="w3-tag w3-small w3-black"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/soon';"><b><i class="fas fa-robot"></i> Ρομποτική </b></a></span> το <span class="w3-tag w3-small w3-white"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/iot';"><b><i class="fas fa-network-wired"></i> IoT</b></a></span>  και να βρεις project με <span class="w3-tag w3-small w3-blue"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/arduino';"><b><i class="fas fa-infinity"></i> Arduino</b></a></span> και <span class="w3-tag w3-small w3-red"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/raspberrypi';"><b><i class="fab fa-raspberry-pi"></i> Raspberry Pi</b></a></span> και εφαρμογές <span class="w3-tag w3-small w3-purple"><a style="text-decoration: none;" onclick="window.location.href='https://alexandroshub.github.io/codingzone';"><b><i class="fas fa-code"></i> Προγραμματισμού</b></a></span> αλλά και οδηγούς και περιεχόμενο ψυχαγωγίας και ενημέρωσης σε θέματα γύρω από τη τεχνολογία.</p>
-  <br>
+ 
 
    <button onclick="window.location.href='https://alexandroshub.github.io/welcome21.html'"   class="btn pull-center">read more About</button> <br>
    <br>
@@ -349,7 +387,7 @@
       </div>
     </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>About Me</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
         <img src="https://64.media.tumblr.com/22f322af60457be74e7a6e5d1ecfbd40/373afe46f4cadf41-25/s2048x3072/6a832952d64e4d860a74a68d38f50f984e4300ce.png" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
