--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
   <title>AlexandrosHUB | Automations IoT and all about tech</title>
   <link rel="icon" href="https://66.media.tumblr.com/9f91f0dbdfacf1b392ea57952b64b007/5c25108e88c20a16-06/s500x750/e4c92b25ff82c66650a9593cc1c7e43a06570b50.png" type="image/png">
   <head>
-  <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme The Band</title>
+
+	  <meta http-equiv="Refresh" content="2;url=https://alexandroshub.github.io/Qindex">
+	  
   <!--  /////// meta information  /////// -->
     <meta charset="UTF-8">
     <meta name="author" content="Alexandros Papaspyrou">
